[package]
name = "promow"
version = "0.1.0"
authors = ["Braden Ehrat <braden@ehrat.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alt-stm32f30x-hal = { version =  "0.24.0", features = ["rt", "stm32f303"] }
cortex-m = "0.6.3"
cortex-m-rt = "0.6.3"
panic-itm = "0.4.0"
